src/test/ui/nll/ty-outlives/impl-trait-captures.stderr
error[E0700]: hidden type for `Opaque(DefId(0:13 ~ impl_trait_captures[1afc]::foo::{opaque#0}), ['a/0, T, BrNamed(DefId(0:12 ~ impl_trait_captures[1afc]::foo::'_))/2])` captures lifetime that does not appear in bounds
  --> $DIR/impl-trait-captures.rs:11:5
   |
LL | fn foo<'a, T>(x: &T) -> impl Foo<'a> {
   |                  - hidden type `&BrNamed(DefId(0:12 ~ impl_trait_captures[1afc]::foo::'_))/2 T` captures the anonymous lifetime as defined here
LL |     x
   |     ^
   |
help: to declare that `Opaque(DefId(0:13 ~ impl_trait_captures[1afc]::foo::{opaque#0}), ['a/0, T, BrNamed(DefId(0:12 ~ impl_trait_captures[1afc]::foo::'_))/2, 'a/3])` captures `BrNamed(DefId(0:12 ~ impl_trait_captures[1afc]::foo::'_))/2`, you can add an explicit `BrNamed(DefId(0:12 ~ impl_trait_captures[1afc]::foo::'_))/2` lifetime bound
   |
LL | fn foo<'a, T>(x: &T) -> impl Foo<'a> + BrNamed(DefId(0:12 ~ impl_trait_captures[1afc]::foo::'_))/2 {
   |                                      +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
